# FileTransfer

./: .gitignore  FileTransfer.py  LICENSE.txt  README.md  __main__.py  clientTest.py  pyproject.toml
.github/workflows/: pypitest.yml
app/: __init__.py  client.py  clientUI.py  server.py  utility.py
weily-FileTransfer/: __main__.py  client.py  filetransfer.toml  server.py  settings.py  starter.py
weily-FileTransfer/app/: __init__.py  client.py  clientUI.py  server.py  utility.py
